<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ShoppingFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etProdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Product Name"
        android:textSize="16sp"
        android:layout_margin="5dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Amount"
        android:textSize="14sp"
        android:layout_margin="5dp"
        />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Price"
        android:textSize="16sp"
        android:layout_margin="5dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Item"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/app_name"
        />

</LinearLayout>